fix footer alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,15 @@
 body {
   margin: 0;
-  display: flex;
+  /*display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100vh;*/
   /*background-color: #000000;*/
 }
 
 app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   background-color: #000000;
 }
 
@@ -81,7 +84,11 @@ router-outlet {
   flex: 1 0 0;
 }
 
-section, app-home-page {
+app-home-page {
+  min-height: 100vh;
+}
+
+section {
   height: 100vh;
   margin: 0;
 }
@@ -92,6 +99,7 @@ section#gallery {
 
 section#safety {
   min-height: auto;
+  background-color: #000000;
 }
 
 section#map-component {
